--- a/_config.yml
+++ b/_config.yml
@@ -16,14 +16,14 @@ minimal_mistakes_skin    : "air" # "default", "air", "aqua", "contrast", "dark",
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Site Title"
+title                    : "There is no end to learning, but I wish it would be over"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Inje Kim"
 description              : "I'm very interested in GNN, GPU, and NPU."
 url                      : "https://sis013.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : https://github.com/sis013/sis013.github.io/ # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -102,11 +102,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Inje Kim"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
-  email            :
+  bio              : 
+  location         : "Department of Computer Science and Engineering, Korea University, Seoul, South Korea"
+  email            : sis013@korea.ac.kr
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
