--- a/_config.yml
+++ b/_config.yml
@@ -127,6 +127,13 @@ author:
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
 
+# Math equation
+markdown: kramdown
+highlighter: rouge
+lsi: false
+excerpt_separator: "\n\n"
+incremental: false
+
 # Site Footer
 footer:
   links:
